--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
-  
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -105,6 +107,22 @@
 
 }
 
+#vector{
+  stroke-dasharray: 849;
+  stroke-dashoffset: 849;
+  animation: sign 4s ease-in-out forwards 1s;
+}
 
+#loading{
+  animation: fill 0.2s ease-in forwards 5s;
+}
 
+@keyframes fill{
+  from{
+    fill: transparent
+  }
+  to {
+    fill: #FFFFFF;
+  }
+}
 
