--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,6 @@
   scroll-behavior: smooth;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 
@@ -97,9 +96,9 @@
 
 .gradient{
 
-  background: #7F00FF;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #6a86ff;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #7c00ff, #6a86ff);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #7c00ff, #6a86ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -124,5 +123,9 @@
   to {
     fill: #FFFFFF;
   }
+}
+
+.textfield__label {
+  color: white !important;
 }
 
