--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "PT mono", sans-serif;
   scroll-behavior: smooth;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
