--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,31 +12,37 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 0px;
+  /* width: 8px; */
 }
 
 ::-webkit-scrollbar-track {
+  background-color: transparent;
 
-  background-color: #151515;
-}
+   /* background-color: #151515; */
+} 
 
 ::-webkit-scrollbar-thumb {
-  background-color: #9c9c9c;
-  border-radius: 5px;
+  background-color: transparent;
+  /* background-color: #9c9c9c;
+  border-radius: 5px; */
 }
 
 /* Firefox */
 ::-moz-scrollbar {
-  width: 8px;
+  width: 0px;
+  /* width: 8px; */
 }
 
 ::-moz-scrollbar-track {
-  background-color: #151515;
+  background-color: transparent;
+  /* background-color: #151515; */
 }
 
 ::-moz-scrollbar-thumb {
-  background-color: #9c9c9c;
-  border-radius: 5px;
+  background-color: transparent;
+  /* background-color: #9c9c9c;
+  border-radius: 5px; */
 }
 
 
