--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,11 +143,11 @@
 #vector{
   stroke-dasharray: 849;
   stroke-dashoffset: 849;
-  animation: sign 1.5s ease-in forwards ;
+  animation: sign 1.3s ease-in forwards ;
 }
 
 #loading{
-  animation: fill 0.3s ease-out forwards 1.7s;
+  animation: fill 0.3s ease-in-out forwards 1.5s;
 }
 
 @keyframes fill{
